--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "json-server": "^0.17.3",
     "node-sass": "^8.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.1",
-    "vuex": "^4.1.0",
-    "material-design-icons-iconfont": "6.7.0"
+    "vue3-rich-accordion": "^0.0.7",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
