--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.2.1",
     "vue3-rich-accordion": "^0.0.7",
+    "vue3-tabs-component": "^1.3.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
