--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueform/multiselect": "^2.6.2",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "json-server": "^0.17.3",
