--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.2.1",
     "vue3-rich-accordion": "^0.0.7",
     "vue3-tabs-component": "^1.3.2",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
